# OSVR-Core

./: .gitmodules
inc/osvr/PluginHost/: RegistrationContext.h
inc/osvr/Util/: LineLogger.h  Log.h  LogRegistry.h  LogSinks.h  Logger.h
plugins/: CMakeLists.txt
plugins/multicamera/: CMakeLists.txt  com_osvr_MultiCameraTracker.json
src/osvr/PluginHost/: RegistrationContext.cpp
src/osvr/Util/: CMakeLists.txt  Log.cpp.in  LogRegistry.cpp
